2002-11-23  Gregory John Casamento  <greg_casamento@yahoo.com>

	* GormDocument.m: Modified removeConnectionsWithLabel:.. to return
	a boolean to indicate if action/outlet was removed.  Also modified
	the code so that the alert only appears if a connection actually
	exists.
	
2002-11-23  Gregory John Casamento  <greg_casamento@yahoo.com>

	* GormDocument.m: -[GormDocument createClassFiles:] fixed problem
	which was getting the classname from the currently selected row in
	the classesView.  It now calls -[GormOutlineView itemBeingEdited] to
	get the class being edited.
	
2002-11-22  Gregory John Casamento  <greg_casamento@yahoo.com>

	* GormDocument.[hm]: added -[GormDocument removeConnectionsWithLabel: 
	(NSString *)name forClassNamed: (NSString *)className
	isAction: (BOOL)action.  This method removes the connections relavent
	to an action/outlet when it's name is changed.  I also modified the
	delegate to call it and to present the user w/ an alert panel.  This
	is consistent w/ how InterfaceBuilder behaves.
	
2002-11-20  Adam Fedor  <fedor@gnu.org>

	* GModelDecoder.m
	([GormObjectProxy -initWithModelUnarchiver:]): Retain the className.
	([GormDocument -defineClass:inFile:]): New.
	([GormDocument -openGModel:]): Define custom classes, setup
	connection objects appropriatly.
	* GormClassManager.m (-isKnownClass:): New.

	* GormFilesOwner.m ([GormFilesOwnerInspector -dealloc]): Don't
	release superclass ivar window.

2002-11-19  Gregory John Casamento <greg_casamento@yahoo.com>

	* ClassInformation.plist: Added entry for NSOpenGLView.

2002-11-19  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* GormObjectEditor.m ([GormObjectEditor +setEditor:forDocument:]): 
	replaced self with editor. There was an exception when instancing
	any class.

2002-11-19  Gregory John Casamento  <greg_casamento@yahoo.com>

	* Gorm.m: Added key equivalents for operations in the Classes
	menu.
	
2002-11-18  Pierre-Yves Rivaille  <pyrivail@ens-lyon.fr>
 